# ebirdplanning

./: .gitignore  Data.hs  Main.hs  ebird.cabal  stack.yaml
data/: idmap.txt
data/Discovery Bay/: L1414111.txt  L1440974.txt  L4761836.txt  L575522.txt  L608115.txt
data/High Olympics/: L1777266.txt  L4176035.txt  L4956910.txt  L5297807.txt  L608380.txt  L967793.txt  L982949.txt
data/Kitsap Peninsula/: L1061364.txt  L1460597.txt  L1474534.txt  L4543580.txt  L5378701.txt  L601513.txt  L815083.txt  L869260.txt
data/Lake Crescent/: L1006830.txt  L2180307.txt  L6582703.txt  L945783.txt  L971611.txt
data/Neah Bay/: L1057779.txt  L1214221.txt  L1567344.txt  L267161.txt  L2763900.txt  L3075795.txt  L3374604.txt  L3915800.txt  L4175951.txt  L5253818.txt  L5254015.txt  L6299347.txt  L6579451.txt  L6579516.txt  L7861248.txt  L800182.txt
data/Port Angeles/: L1449797.txt  L190512.txt  L245894.txt  L266759.txt  L4033784.txt  L590483.txt  L793855.txt  L910541.txt
data/Port Townsend/: L1049118.txt  L1254746.txt  L1258382.txt  L1303750.txt  L1445524.txt  L1463292.txt  L1778668.txt  L1818551.txt  L1904081.txt  L2284530.txt  L292857.txt  L4571530.txt  L4905240.txt  L5216820.txt  L6504878.txt  L7198245.txt  L812275.txt  L812287.txt  L821301.txt
data/Whidbey Island/: L1057786.txt  L1218789.txt  L1230938.txt  L1297377.txt  L1316721.txt  L1360330.txt  L1460636.txt  L2129655.txt  L233763.txt  L2454924.txt  L2834884.txt  L520653.txt  L6315479.txt  L715049.txt  L7379094.txt  L798675.txt  L813395.txt
data/discoveryBay/: L1232767.txt  L273591.txt  L3886317.txt  L6049435.txt  (+3 more)
(+144 files in other folders)
