name:                ebird
version:             0.0.0.1
synopsis:            parse ebird data
license:             GPL-3
license-file:        LICENSE
author:              Eric Crockett <ecrockett0@gmail.com>
maintainer:          Eric Crockett <ecrockett0@gmail.com>
category:            Crypto
stability:           experimental
build-type:          Simple
cabal-version:       >= 1.10
description:         parse ebird data

executable ebird
  default-language: Haskell2010
  main-is:          Main.hs

  ghc-options: -threaded -rtsopts -O2 -fno-warn-partial-type-signatures

  other-modules:
    Data

  build-depends:
    base,
    bytestring,
    containers,
    directory,
    filepath,
    http-conduit,
    utf8-string
